refactoring and reviewing the tests code