@@ -1,13 +1,5 @@
 package com.betamedia.qe.af.testslibrary.option24.web.bmw.smoke;
 
-import static org.testng.Assert.assertEquals;
-
-import java.util.List;
-
-import org.openqa.selenium.WebElement;
-import org.testng.Assert;
-import org.testng.annotations.Test;
-
 import com.betamedia.qe.af.core.api.tp.entities.builders.CustomerBuilder;
 import com.betamedia.qe.af.core.api.tp.entities.response.CRMAccount;
 import com.betamedia.qe.af.core.api.tp.entities.response.CRMCustomer;
@@ -17,14 +9,20 @@ import com.betamedia.tp.api.model.Asset;
 import com.betamedia.tp.api.model.Position;
 import com.betamedia.tp.api.model.enums.OptionType;
 import com.betamedia.tp.api.model.enums.PositionStatus;
+import org.openqa.selenium.WebElement;
+import org.testng.Assert;
+import org.testng.annotations.Test;
+
+import java.util.List;
+
+import static org.testng.Assert.assertEquals;
 
 /**
  * @author leonid.a
- *
  */
 public class ShortTermPositionsOpeningClosing extends TPEndToEndTest {
 
-	@Test()	
+    @Test()
     public void openAPositionThatExpiresIn60SecondsWithInvestedAmountMinimumAllowed() {
         Asset asset = operations().assetOperations().get();
         operations().optionTemplateOperations().create(asset.getId(), OptionType.HILO, TagOperations.TagName.SHORT_TERM_60_SEC_GAME_H3_TEXT);
@@ -38,19 +36,19 @@ public class ShortTermPositionsOpeningClosing extends TPEndToEndTest {
         pages().disclaimerNotification().accept();
         pages().binarySelector().highLow();
         pages().assets().asset(asset.getId(), asset.getAssetName());
-        
-        String minInvestment = "15.0"; 	//TODO GetMinInvestment for Game and Category
+
+        String minInvestment = "15.0";    //TODO GetMinInvestment for Game and Category
         pages().bidder()
                 .bidLow()
                 .setAmount(minInvestment)
                 .confirm();
-        
+
         List<String> positionIds = pages().positions().get();
         Position position = operations().positionOperations().getByDisplayId(positionIds.get(positionIds.size() - 1));
         assertEquals(position.getStatus(), PositionStatus.OPEN);
-	}
-	
-	@Test()
+    }
+
+    @Test()
     public void openAPositionThatExpiresIn60SecondsWithInvestedAmountMaximumAllowed() {
         Asset asset = operations().assetOperations().get();
         operations().optionTemplateOperations().create(asset.getId(), OptionType.HILO, TagOperations.TagName.SHORT_TERM_60_SEC_GAME_H3_TEXT);
@@ -65,10 +63,10 @@ public class ShortTermPositionsOpeningClosing extends TPEndToEndTest {
         pages().topNavigationPage().binary();
         pages().binarySelector().highLow();
         pages().disclaimerNotification().accept();
-        
-        int investedAmount = 15; 		//TODO it must equal to this function from legacy framework: AssetTestingUtils.getMinInvestment(game, category);
-        Double maxInvestment = 150.0; 	//TODO it must equal to this function from legacy framework: GetMaxInvestment for Game and Category
-        
+
+        int investedAmount = 15;        //TODO it must equal to this function from legacy framework: AssetTestingUtils.getMinInvestment(game, category);
+        Double maxInvestment = 150.0;    //TODO it must equal to this function from legacy framework: GetMaxInvestment for Game and Category
+
 //		Legacy framework calls:
 //        String baseCurrenacyPositionDisplayId = pomHolder.bidder().openPosition(webDriver, asset.getAssetName(), testCaseOption, BinarySelection.LOW, String.valueOf(investedAmount), game, category, true);
 //        Position position = PositionTestingManager.getInstance().getPosition(baseCurrenacyPositionDisplayId);
@@ -77,11 +75,11 @@ public class ShortTermPositionsOpeningClosing extends TPEndToEndTest {
         Position position = operations().positionOperations().getByDisplayId(positionIds.get(positionIds.size()));
 //?????????????
         //PositionTestingManager.getInstance().cancelPosition(position, "Test '" + testCaseDisplayId + "'");
-        
+
         double baseCurrencyMinAmout = position.getBaseCurrencyAmount();
         double conversionRate = baseCurrencyMinAmout / investedAmount;
         int baseCurrencyMaxInvestmentLimit = (int) (maxInvestment * conversionRate * 2);
-       
+
 //		TODO: This can be done after method completenes: com.betamedia.qe.af.core.dsl.operations.impl.AccountGroupOperationsImpl.Create()  
 /*    if (operations().accountGroupOperations().getExposureLimit() <= baseCurrencyMaxInvestmentLimit) {     
         //if (accountGroup.getExposureLimit() <= baseCurrencyMaxInvestmentLimit) {
@@ -91,24 +89,25 @@ public class ShortTermPositionsOpeningClosing extends TPEndToEndTest {
             AccountGroupTestingManager.getInstance().updateEntity(accountGroup, propertiesSet);
         }
   */
-        Double accountBalance = operations().accountOperations().getTP(accountId).getBalance();        
+        Double accountBalance = operations().accountOperations().getTP(accountId).getBalance();
         if (accountBalance <= maxInvestment) {
             operations().accountOperations().updateBalanceTP(accountId, (double) maxInvestment + 200);
         }
-       
+
         pages().bidder()
                 .setAmount(maxInvestment.toString())
                 .bidLow()
                 .confirm();
-        
+
 //        List<String> positionIds = pages().positions().get();
         position = operations().positionOperations().getByDisplayId(positionIds.get(positionIds.size() - 1));
         assertEquals(position.getStatus(), PositionStatus.OPEN);
-	}
-	
-	@Test
-	public void OpenAPositionThatExpiresIn60SecondsBasicFunctionality() {
-		Asset asset = operations().assetOperations().get();
+    }
+
+    @Test
+//TODO    fully duplicates the code of the first test
+    public void OpenAPositionThatExpiresIn60SecondsBasicFunctionality() {
+        Asset asset = operations().assetOperations().get();
         operations().optionTemplateOperations().create(asset.getId(), OptionType.HILO, TagOperations.TagName.SHORT_TERM_60_SEC_GAME_H3_TEXT);
         operations().feedOperations().injectFeed(asset.getId(), 1.5d);
         CRMCustomer customer = operations().customerOperations().register();
@@ -120,8 +119,8 @@ public class ShortTermPositionsOpeningClosing extends TPEndToEndTest {
         pages().disclaimerNotification().accept();
         pages().binarySelector().highLow();
         pages().assets().asset(asset.getId(), asset.getAssetName());
-        
-        String minInvestment = "15.0"; 	//TODO it must equal to this function from legacy framework: AssetTestingUtils.getMinInvestment(game, category);
+
+        String minInvestment = "15.0";    //TODO it must equal to this function from legacy framework: AssetTestingUtils.getMinInvestment(game, category);
         pages().bidder()
                 .bidLow()
                 .setAmount(minInvestment)
@@ -130,11 +129,11 @@ public class ShortTermPositionsOpeningClosing extends TPEndToEndTest {
         List<String> positionIds = pages().positions().get();
         Position position = operations().positionOperations().getByDisplayId(positionIds.get(positionIds.size() - 1));
         assertEquals(position.getStatus(), PositionStatus.OPEN);
-	}
-	
-	@Test
-	public void OpenAPositionThatEexpiresIn2MinutesBasicFunctionality(){
-		Asset asset = operations().assetOperations().get();
+    }
+
+    @Test
+    public void OpenAPositionThatEexpiresIn2MinutesBasicFunctionality() {
+        Asset asset = operations().assetOperations().get();
         operations().optionTemplateOperations().create(asset.getId(), OptionType.HILO, TagOperations.TagName.SHORT_TERM_2_MIN_GAME_H3_TEXT);
         operations().feedOperations().injectFeed(asset.getId(), 1.5d);
         CRMCustomer customer = operations().customerOperations().register();
@@ -146,8 +145,8 @@ public class ShortTermPositionsOpeningClosing extends TPEndToEndTest {
         pages().disclaimerNotification().accept();
         pages().binarySelector().highLow();
         pages().assets().asset(asset.getId(), asset.getAssetName());
-        
-        String minInvestment = "15.0"; 	//TODO it must equal to this function from legacy framework: AssetTestingUtils.getMinInvestment(game, category);
+
+        String minInvestment = "15.0";    //TODO it must equal to this function from legacy framework: AssetTestingUtils.getMinInvestment(game, category);
         pages().bidder()
                 .bidLow()
                 .setAmount(minInvestment)
@@ -156,11 +155,11 @@ public class ShortTermPositionsOpeningClosing extends TPEndToEndTest {
         List<String> positionIds = pages().positions().get();
         Position position = operations().positionOperations().getByDisplayId(positionIds.get(positionIds.size() - 1));
         assertEquals(position.getStatus(), PositionStatus.OPEN);
-	}
-	
-	@Test
-	public void OpenAPositionThatEexpiresIn5MinutesBasicFunctionality(){
-		Asset asset = operations().assetOperations().get();
+    }
+
+    @Test
+    public void OpenAPositionThatEexpiresIn5MinutesBasicFunctionality() {
+        Asset asset = operations().assetOperations().get();
         operations().optionTemplateOperations().create(asset.getId(), OptionType.HILO, TagOperations.TagName.SHORT_TERM_5_MIN_GAME_H3_TEXT);
         operations().feedOperations().injectFeed(asset.getId(), 1.5d);
         CRMCustomer customer = operations().customerOperations().register();
@@ -172,8 +171,8 @@ public class ShortTermPositionsOpeningClosing extends TPEndToEndTest {
         pages().disclaimerNotification().accept();
         pages().binarySelector().highLow();
         pages().assets().asset(asset.getId(), asset.getAssetName());
-        
-        String minInvestment = "15.0"; 	//TODO it must equal to this function from legacy framework: AssetTestingUtils.getMinInvestment(game, category);
+
+        String minInvestment = "15.0";    //TODO it must equal to this function from legacy framework: AssetTestingUtils.getMinInvestment(game, category);
         pages().bidder()
                 .bidLow()
                 .setAmount(minInvestment)
@@ -182,9 +181,9 @@ public class ShortTermPositionsOpeningClosing extends TPEndToEndTest {
         List<String> positionIds = pages().positions().get();
         Position position = operations().positionOperations().getByDisplayId(positionIds.get(positionIds.size() - 1));
         assertEquals(position.getStatus(), PositionStatus.OPEN);
-	}
-	
-	@Test	
+    }
+
+    @Test(description = "Check that the color of the cursor changes successfully on win and lose")
     public void PositionIndicationCheckThatTheColorOfTheCursorChangesSuccessfullyOnWinAndLose() {
         Asset asset = operations().assetOperations().get();
         operations().optionTemplateOperations().create(asset.getId(), OptionType.HILO, TagOperations.TagName.SHORT_TERM_60_SEC_GAME_H3_TEXT);
@@ -199,39 +198,44 @@ public class ShortTermPositionsOpeningClosing extends TPEndToEndTest {
         pages().disclaimerNotification().accept();
         pages().binarySelector().highLow();
         pages().assets().asset(asset.getId(), asset.getAssetName());
-        String minInvestment = "15.0"; 	//TODO GetMinInvestment for Game and Category
-        
+        String minInvestment = "15.0";    //TODO GetMinInvestment for Game and Category
         pages().bidder()
                 .bidLow()
                 .setAmount(minInvestment)
                 .confirm();
 
-      List<String> positionIds = pages().positions().get();
-      String lowPositionDisplayId =  positionIds.get(positionIds.size() - 1);
-      Position lowPosition = operations().positionOperations().getByDisplayId(lowPositionDisplayId);
-        
-      pages().bidder()
-       		.bidHigh()
-       		.setAmount(minInvestment)
-       		.confirm();
-      positionIds = pages().positions().get();
-      
-      String highPositionDisplayId = positionIds.get(positionIds.size() - 1);
-      Position highPosition = operations().positionOperations().getByDisplayId(highPositionDisplayId);
-        
-      double spread = lowPosition.getSpread() != null ? lowPosition.getSpread() : 0;
-      operations().feedOperations().injectFeed(asset.getId(), spread - 0.5d);
-      
-      operations().positionOperations().waitTradeToExpire(lowPosition);
-      operations().positionOperations().waitTradeToExpire(highPosition);
-      
-      WebElement lowPosRow = pages().positions().getTradeRow(lowPositionDisplayId);
-      WebElement highPosRow = pages().positions().getTradeRow(highPositionDisplayId);
+        String lowPositionDisplayId = pages().positions().getLast();
+        Position lowPosition = operations().positionOperations().getByDisplayId(lowPositionDisplayId);
 
-      Assert.assertEquals(lowPosRow.getAttribute("class").contains("bmPositive"), true);
-      Assert.assertEquals(lowPosRow.getAttribute("class").contains("bmWin"), true);
-      Assert.assertEquals(highPosRow.getAttribute("class").contains("bmNegative"), true);
-      Assert.assertEquals(highPosRow.getAttribute("class").contains("bmLose"), true);
+        pages().bidder()
+                .bidHigh()
+                .setAmount(minInvestment)
+                .confirm();
 
-	}
+        String highPositionDisplayId = pages().positions().getLast();
+        Position highPosition = operations().positionOperations().getByDisplayId(highPositionDisplayId);
+//the logic of forming lower and hire then position value should be inside appropriate operations
+        double spread = lowPosition.getSpread() != null ? lowPosition.getSpread() : 0;
+//        TODO: why did you brake the original logic? UISyncTesting.tradeRowDisplayAfterWinOrLose: 1455
+//        you'll get a wrong result
+/*        we need two methods in feed operations
+ feedOperations().injectFeedHire(assetId, position)
+ feedOperations().injectFeedLower(....)
+ the logic should be incapsulated inside
+* */
+        operations().feedOperations().injectFeed(asset.getId(), spread - 0.5d);
+
+        operations().positionOperations().getExpired(lowPosition);
+        operations().positionOperations().getExpired(highPosition);
+
+//        TODO logic and assertions should be inside approppriate methods checkWin(...) and checkLose(....), also you are breaking the incapsulation of webElements inside pageObjects
+        WebElement lowPosRow = pages().positions().getTradeRow(lowPositionDisplayId);
+        WebElement highPosRow = pages().positions().getTradeRow(highPositionDisplayId);
+
+        Assert.assertEquals(lowPosRow.getAttribute("class").contains("bmPositive"), true);
+        Assert.assertEquals(lowPosRow.getAttribute("class").contains("bmWin"), true);
+        Assert.assertEquals(highPosRow.getAttribute("class").contains("bmNegative"), true);
+        Assert.assertEquals(highPosRow.getAttribute("class").contains("bmLose"), true);
+
+    }
 }
